--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server.js",
-    "start": "nodemon ./src/server.js"
+    "dev": "cross-env BUILD_MODE=dev nodemon ./src/server.js",
+    "production": "cross-env BUILD_MODE=production node ./src/server.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "http-status-codes": "^2.3.0",
@@ -27,6 +28,9 @@
     "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "nodemon": "^3.1.11"
   }
 }
